--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,27 @@
-# UCIe 2.5D/3D Test System Requirements
-# Core dependencies for the test system
-
-# GUI Framework (for main GUI application)
-wxpython>=4.0.0
-
-# Instrument Control and Communication
-pyvisa>=1.11.0
-pyvisa-py>=0.5.0
-
-# Data Processing and Analysis
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.5.0
-
-# Excel and Document Processing
-openpyxl>=3.0.0
-python-docx>=0.8.0
-
-# Raspberry Pi and Microcontroller Communication
-mpremote>=1.20.0
-psutil>=5.8.0
-
-# Automation and UI Control
-pyautogui>=0.9.0
-
-# Data Visualization and Reporting
-tabulate>=0.9.0
-
-# Serial Communication (for Raspberry Pi)
-pyserial>=3.5
-
-# Additional utilities
-pathlib2>=2.3.0; python_version < "3.4"
-
-# Optional: For advanced plotting and analysis
-seaborn>=0.11.0
-plotly>=5.0.0
-
-# Optional: For enhanced data processing
-scipy>=1.7.0
-scikit-learn>=1.0.0
-
-# Development and Testing (optional)
-pytest>=6.0.0
-black>=21.0.0
-flake8>=3.9.0
+et_xmlfile==2.0.0
+MouseInfo==0.1.3
+numpy==2.3.3
+openpyxl==3.1.5
+pandas==2.3.3
+pillow==11.3.0
+prettytable==3.16.0
+psutil==7.1.0
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+PyMsgBox==2.0.1
+pyperclip==1.11.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+pyserial==3.5
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
+pytz==2025.2
+PyVISA==1.15.0
+PyVISA-py==0.8.1
+six==1.17.0
+tabulate==0.9.0
+typing_extensions==4.15.0
+tzdata==2025.2
+wcwidth==0.2.14
+wxPython==4.2.3
+xlrd==2.0.2
